Adjusted opacity so that buttons are clearly visible. Fixes #9.

--- a/wordmapper/client/src/css/style.css
+++ b/wordmapper/client/src/css/style.css
@@ -45,12 +45,8 @@
 }
 .wordmapper-panel {
     position: fixed;
-    opacity: 0.75;
-    background-color: #000;
+    background-color: rgba(0,0,0,.7);
     z-index: 1002;
-}
-.wordmapper-panel:hover {
-    opacity: 0.9;
 }
 .wordmapper-panel-top {
     top: 0;
@@ -140,17 +136,18 @@
     position: relative;
 }
 .wordmapper-tooltip:hover:after{
-    font-size: 11px;
+    font-size: 12px;
     background: #333;
-    background: rgba(0,0,0,.8);
+    background: rgba(0,0,0,.7);
     border-radius: 5px;
     top: 38px;
     color: #fff;
     content: attr(alt);
-    left: 20%;
+    left: 0;
     padding: 5px 15px;
     position: absolute;
-    width: 220px;
+    width: auto;
+    white-space: nowrap;
 }
 .wordmapper-tooltip:hover:before{
     border: solid;
